// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> spec renders the component 1`] = `
<DocumentFragment>
  <button
    class="button primary theme-bus size-medium"
    type="button"
  >
    <span>
      My Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> spec renders the loading button component 1`] = `
<DocumentFragment>
  <button
    class="button clear theme-bus size-medium"
    disabled=""
    type="button"
  >
    <span>
      Loading...
    </span>
  </button>
</DocumentFragment>
`;
